src/css/theme/_default.scss
/* Base style File */

//@media (min-width: 768px) and (max-width: 991px) {
//
//}
//
//@media (min-width: 992px) and (max-width: 1199px) {
//
//}
//
//@media (min-width: 1200px) {
//
//}

body {
  font-family: $standard-text;
  background-color: $fenix-light-bg;
  color: $fenix-text;
}

@mixin fs-box-shadow($value){
  -webkit-box-shadow:$value;
  -moz-box-shadow:$value;
  box-shadow:$value;
}


.fs-main-container {
  padding-bottom: 60px;
}

.container, .container-fluid {
  //background-color: white;
  //background-color: #f9f9f9;
  //background-color: #fefefe;
  background-color: $fx-container-bg;
  //background-color: rgba(249, 249, 249, 0.54)
}

.truncate {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.upper {
  text-transform: uppercase;
}

.btn {
  @include fx-border-radius(0);
  //background-color: transparent;
  //border: 1px solid $buttons;
  //color: $buttons;
  outline: none;
}

.label-aligned {
  padding-left: 0;
}

.list-indent {
  padding-left: 15px;
}

.fs-data-padding-top {
  margin-top: 15px;
}

.fs-section-back {
  margin: 18px 0;
}


hr {
  border-top: 1px solid $fenix-light-hr;
}

.bootstrap-content-box-reset {

  * {
    -webkit-box-sizing: content-box;
    -moz-box-sizing: content-box;
    box-sizing: content-box;
  }

}

/* Menu */
.fs-menu-search-container {
  background-color: $fx-container-bg;
  border-right: 0 !important;
}

.fs-menu-search-container-sm {
  padding-top: 10px;
  border-bottom:1px solid $fx-site-bg;
}


.fs-search-icon {
  margin-top: 14px;
  margin-left: 12px;
  font-size: 21px;
}


/* Footer */

footer.container {

  padding-top: 15px;
  background-color: #0D6CAC;

  color: white;
  //color: black;

  a {
    color: white !important;
  }


  h4 {
    margin-top: 15px;
    margin-bottom: 20px;
    color: white;
  }

}

.fs-footer-logo {
  position: relative;
  left: -15px;
}

/* Override Fenix Tree */
.fs-tree-holder, .fs-content-padding {
  padding-top: 25px;
}

// labels

.label-default {
  color: $fx-cool-blue;
}

.label-danger {
  color: $fx-cool-red;
}

.label {
  background-color: transparent;
}

.btn-floating.disabled {
  cursor: not-allowed;
  filter: alpha(opacity=65);
  @include fx-noshadow();
  opacity: .45;
}

.panel-border {
  border: 1px solid $fenix-light-hr;
  //margin: 15px;
  margin-bottom: 15px;

}

/* Table Style */

.fs-table, .fs-pivot {
  font-family: "Lucida Console", Monaco, monospace;
  //font-family: "Inconsolata";
  //font-family: "Apercu Monospace";
  font-size: 12px;
  color: #666666;
}

/* Bootstrap 4 */

.text-xs-center {
  text-align: center!important;
}


.faostat-title {
  margin-top: 10px;
  margin-bottom: 10px;
  margin-left: -15px;
}

.text-initials:first-letter {
  text-transform:uppercase;
}

/* scroll bar */
/*::-webkit-scrollbar {
  height: 6px;
  width: 6px;
  background: #ebebeb;
  overflow: visible;
}
::-webkit-scrollbar-corner {
  display: none;
  background: #f5f5f5;
}

::-webkit-scrollbar-button {
  display: none;
  height:0;
  width: 0;
}

::-webkit-scrollbar-button:start:decrement,::-webkit-scrollbar-button:end:increment             {
  display: block;
}

::-webkit-scrollbar-button:vertical:start:increment,::-webkit-scrollbar-button:vertical:end:decrement {
  display: none;
}

::-webkit-scrollbar-track {
  -moz-background-clip: border;
  -webkit-background-clip: border;
  background-clip: padding-box;
  background-color: #f5f5f5;
}

::-webkit-scrollbar-track:vertical, ::-webkit-scrollbar-track:horizontal {
  border-left-width: 0;
  border-right-width: 0;
}

::-webkit-scrollbar-track:vertical,::-webkit-scrollbar-track:horizontal,::-webkit-scrollbar-thumb:vertical,::-webkit-scrollbar-thumb:horizontal,::-webkit-scrollbar-track:vertical,::-webkit-scrollbar-track:horizontal,::-webkit-scrollbar-thumb:vertical,::-webkit-scrollbar-thumb:horizontal {
  border-style: solid;
  border-color: transparent;
}

::-webkit-scrollbar-thumb {
  -webkit-box-shadow: inset 1px 1px 0 rgba(0,0,0,.1),inset 0 -1px 0 rgba(0,0,0,.07);
  background-clip: padding-box;
  background-color: rgba(0,0,0,.2);
  //min-height: 28px;
  min-height: 6px;
  padding-top: 100px;
}

::-webkit-scrollbar-thumb:hover {
  -webkit-box-shadow: inset 1px 1px 1px rgba(0,0,0,.25);
  background-color: rgba(0,0,0,.4);
}

::-webkit-scrollbar-thumb:active {
  -webkit-box-shadow: inset 1px 1px 3px rgba(0,0,0,.35);
  background-color: rgba(0,0,0,.5);
}

::-webkit-scrollbar-thumb:vertical, ::-webkit-scrollbar-thumb:horizontal {
  border-width: 0;
  border-left-width: 0;
  border-right-width: 0;
}*/


/** **/

/* Scrollbar */
/*
::-webkit-scrollbar {
  width: 8px;
}
!* Track *!

::-webkit-scrollbar-track {
  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
  -webkit-border-radius: 0px;
  border-radius: 0px;
}
!* Handle *!

::-webkit-scrollbar-thumb {
  -webkit-border-radius: 10px;
  border-radius: 10px;
  background: rgba(0,0,0, .2);
  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.2);
}

::-webkit-scrollbar-thumb:window-inactive {
  background: rgba(0,0,0, 0.4);
}*/

